# Deliberative_RAG

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
api/: main.py  routes.py
config/: authority_weights.py  settings.py
config/prompts/: answer_synthesis.txt  baseline_answer.txt  claim_extraction.txt  conflict_classification.txt  deep_research.txt  factual_judge.txt  query_analysis.txt
data/: download_datasets.py
data/evaluation/: master_eval_dataset.json
data/qdrant_data/: meta.json
data/qdrant_data/collection/eval_documents/: storage.sqlite
demo/: app.py
evaluation/: __init__.py  ablations.py  baseline_rag.py  metrics.py  run_eval.py
src/: __init__.py  schemas.py
src/agent/: __init__.py  deep_research.py  graph.py  nodes.py  state.py
src/mcp/: __init__.py  server.py
src/pipeline/: __init__.py  claim_extractor.py  conflict_graph.py  hybrid_retriever.py  query_analyzer.py  retriever.py  scorer.py  synthesizer.py  vectorless_retriever.py
src/tools/: __init__.py  document_parser.py  web_search.py
src/utils/: __init__.py  llm.py  prompts.py
src/vectorstore/: __init__.py  embeddings.py  indexer.py  qdrant_client.py
tests/: test_ablations.py  test_baseline_rag.py  test_claim_extractor.py  test_conflict_graph.py  test_integration.py  test_metrics.py  test_run_eval.py  test_scoring.py  test_synthesizer.py
